# git-diff-stat

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-14-git-diff-stat-design.md  2026-03-14-git-diff-stat.md  2026-03-14-github-ci-release-design.md  2026-03-14-github-ci-release.md  2026-03-14-last-commit-design.md  2026-03-14-last-commit.md  2026-03-14-rust-test-path-classification-design.md  2026-03-14-rust-test-path-classification.md  2026-03-16-rust-path-imported-test-modules-design.md  2026-03-16-rust-path-imported-test-modules.md  2026-03-20-default-rust-non-test-filters.md  2026-03-20-stats-header-design.md  2026-03-20-stats-header.md  2026-03-21-js-ts-family-support-design.md  2026-03-21-js-ts-family-support.md  2026-03-21-python-lang-support-design.md  2026-03-21-python-lang-support.md
scripts/: release-version.sh
src/: audit.rs  change.rs  cli.rs  filter.rs  git.rs  lang.rs  lib.rs  main.rs  patch.rs  python_tests.rs  render.rs  revision.rs  rust_tests.rs  test_filter.rs
src/lang/: javascript.rs  mod.rs  python.rs  rust.rs
tests/: cli_args.rs  cli_smoke.rs  git_errors.rs  javascript_tests.rs  lang_filter.rs  patch_parser.rs  python_tests.rs  readme_presence.rs  release_workflow.rs  revision.rs  rust_test_audit.rs  rust_tests.rs  test_split.rs  untracked.rs
