[package]
name = "git-diff-stat"
version = "0.2.0"
edition = "2024"
description = "Enhanced git diff --stat with untracked files, language filters, and Rust test-aware stats"
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.23"
